; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/freebsd_x86/dos/extr_42278.c_clash_smash_no_jump.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/freebsd_x86/dos/extr_42278.c_clash_smash_no_jump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @clash_smash_no_jump to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clash_smash_no_jump(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca [1024 x i8], align 16
  store i64 %0, i64* %2, align 8
  %4 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %5 = call i32 @memset(i8* %4, i8 signext 65, i32 1024)
  %6 = load i64, i64* %2, align 8
  %7 = icmp ugt i64 %6, 1024
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i64, i64* %2, align 8
  %10 = sub i64 %9, 1024
  call void @clash_smash_no_jump(i64 %10)
  br label %11

11:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @memset(i8*, i8 signext, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
